# 001_python_demo

./: .gitignore  000_utils.py  002_parsexml_and_draw.py  004_S_KalmanFilter.py  005_post_port_&random_file.py  008_Calculate_distance.py  009_define_const.py  010_logger.py  011_json_parse.py  012_Xmanager.py  013_download.py  014_random_code.py  015_enhance_bigbg_mg.py  999_python-is-cool  check_label.py  post_port.py  readme.txt  sub_readme.txt  test_excel.py
001_flask/: 02_log.py
001_flask/01_video/: app.py
001_flask_video_model/src/: views.py
002_tf_keras_gpu/: 011_parallel_model.py  012_multi_gpu_sample.py  01_mul_procession_read_data.py.txt  readme.txt  test_gpu.py
003_img_video_deal/: 001_video_model_pre.py
003_opencv/: 001_reader_writer_excel.py  003_opencv_scipymisc_imread.py  005_image_reize.py  006_check_video.py  006_check_video_num.py  007_add_logo.py  008_add_chinese_txt.py  009_cammer_gen_video.py  010_merge_img.py  011_gen_video.py  draw_box_cv  readme.txt  sub_readme.txt
004_file/: 001_read_folder_allfile.py  002_rename_VOC_data.py  003_check_label.py  005_hex_code.py  007_read_image_to_array.py  007_read_subfolder_file.py  readme.txt  xmlupdateLabels.py
005_Thread_process/: 01_multithread.py  02_mult_processing.py  02_pipe.py  threadexample1.py  threadexample2.py  threadexample3.py  threadexample4.py  threadexample5.py
006_win_demo/: av_detect_server.bat  readme.txt
007_binocular_opencv/: 001_binocular.py  001_test.py  002_binocular.py  003_binocular.py  010_binocular.py  camera_configs.py  readme.txt
007_binocular_opencv/01_camera_calibration_tool/: 01_calibration.cpp  CMakeLists.txt  calibration.py  readme.txt  str_trim.cpp
008_py封装/: readme.txt  setup.py
009_基础几何相关计算/: 01_region_point.py  02_piont_region.py  readme.txt
010_事件EVENT/: .01_mouse_event.py.swp  01_mouse_event.py  readme.txt
012_Crewler/: 01_download.py  download.py
013_ffmpeg/: 001_ffmpeg_to_img.py  001_pyav_txt_video.py  002_pyav.py
014_pytorch/: 001_topk_softmax.py  002_tensor_cat_split.py
015_model_switch/: 03_pytorch_keras.py.txt
016_训练修改数据_script/: 01_check.py  02_enhance_data.py  03_rename_DIRVOC_data.py  03_rename_VOC_data.py  04_separate_VOC.py  05_mv_rename_img.py  06_coco_showimg.py  07_label_utils.py  2007_train.txt  Makefile  change_info.py  darknet_readme.txt  get_inageSet.py  hat_label.py  make_txt.py  mv_img.py  person_label.py  xml_change_label.py
017_label_util/: labelImg.py  readme.txt  resources.qrc
018_request/: 01_encryption.py  02_getImg.py
flask_video_model/: readme.txt
(+48 files in other folders)
